Manytomany fields now work with chosen.js and jquery.

--- a/plugins/_jquery/view/field/manytomany.field.html
+++ b/plugins/_jquery/view/field/manytomany.field.html
@@ -12,7 +12,7 @@
     zaj.ready(function(){
         {% if field.value %}
             {% foreach field.value as sitem %}
-                $('option[value="{{sitem.id}}"]').select();
+                $('option[value="{{sitem.id}}"]').attr('selected', 'selected');
             {% endfor %}
         {% endif %}
         $('#{{field.uid}}').chosen({width: '100%'});
