--- a/plugins/_jquery/view/field/photos.field.html
+++ b/plugins/_jquery/view/field/photos.field.html
@@ -23,7 +23,7 @@
 <script language="JavaScript" src="{{baseurl}}system/js/plupload/plupload.full.js" type="text/javascript"></script>
 
 <a id="{{field.uid}}-pickfiles" class="btn btn-primary" href="#"><i class="icon-folder-open"></i> Add photos</a>
-<div id="{{field.uid}}-transferbar" class="hidden progress progress-striped active"><div class="bar" style="width: 0;"></div></div>
+<div id="{{field.uid}}-transferbar" class="hidden progress progress-striped active"><div class="progress-bar bar" style="width: 0;"></div></div>
 <div id="{{field.id}}-uploadbutton"></div>
 <div id="{{field.id}}-errors"></div>
 
