--- a/plugins/_jquery/view/field/photos.field.html
+++ b/plugins/_jquery/view/field/photos.field.html
@@ -36,7 +36,7 @@
 		<div class="col-sm-2" id="{{field_thumb.id}}" style="position: relative; cursor: pointer;">
 			<img class="pull-left img-thumbnail img-responsive" src='{{field_thumb.normal}}'>
 		</div>
-		<!--<script>zaj.ready(function(){ zaj.addMyPhotoPopover($('#{{field_thumb.id}}'), '{{field_thumb.large}}'); })</script>-->
+		<script>zaj.ready(function(){ zaj.addMyPhotoPopover($('#{{field_thumb.id}}'), '{{field_thumb.large}}'); })</script>
 	{% endforeach %}
 </div>
 <div class="clearfix"><br/></div>
