Boolean field value fix to default value. There needs to be a global solution for this eventually.

--- a/plugins/_jquery/view/field/boolean.field.html
+++ b/plugins/_jquery/view/field/boolean.field.html
@@ -1,1 +1,2 @@
+{{ field.options.default }}
 <input class='field boolean iCheck' type='checkbox' id='{{field.id}}' name='{{field.name}}' value='true' {% if field.value %}checked{% endif %}>
