--- a/app/view/update/update-process.html
+++ b/app/view/update/update-process.html
@@ -40,9 +40,9 @@
 <hr/>
 
 
-<div id='updateprogress' class='updatetitle updateprogress'><img src='{{baseurl}}system/img/icon/ajax-loader.gif'> update "{{ updatename }}" is running... </div>
-<div id='updatesuccess' class='updatetitle updatesuccess hidden'><img src='{{baseurl}}system/img/icon/ajax-okay.png'> update "{{ updatename }}" was successful!</div>
-<div id='updateerror' class='updatetitle updateerror hidden'><img src='{{baseurl}}system/img/icon/ajax-error.png'> update "{{ updatename }}" had errors! <a onclick='showLog();'>see log</a>.</div>
+	<div id='updateprogress' class='updatetitle updateprogress'><img src='{{baseurl}}system/img/assets/ajax-loader.gif'> Update "{{ updatename }}" is running... </div>
+	<div id='updatesuccess' class='updatetitle updatesuccess hidden'><i class="icon icon-ok"></i> Update "{{ updatename }}" was successful!</div>
+	<div id='updateerror' class='updatetitle updateerror hidden' style="color: red;"><i class="icon-remove"></i> Update "{{ updatename }}" had errors! <a onclick='showLog();'>see log</a>.</div>
 	<br>
 	<div class='well updatelog'>
 		<big>update log (<div class='inline' id='updatenumofchanges'>--</div> automatic changes done, <div class='inline' id='updatenumofmanualchanges'>--</div> manual changes waiting) | <a onclick='showLog();'>show</a> |</big><br>
