--- a/app/view/admin/category/category_list.html
+++ b/app/view/admin/category/category_list.html
@@ -73,7 +73,7 @@
 
 					<a class="btn btn-small btn-danger pull-right" onclick="if(confirm('{{#admin_delete_warning#}}')) window.location='{{baseurl}}admin/category/delete/?id={{object.id}}';"><i class="glyphicon glyphicon-trash"></i></a>
                     <a class="btn btn-primary btn-small pull-right" href="{{baseurl}}admin/category/edit/?id={{object.id}}">{{#admin_edit#}}</a>
-					{% if not object.data.parentcategory and #category_two_level# %}
+					{% if not object.data.parentcategory and #category_two_level# or not #category_two_level# %}
                     	<a class="btn btn-primary btn-small pull-right" href="{{baseurl}}admin/category/?parentcategory={{object.id}}">{{#admin_edit_subcategories#|printf:object.child_count}}</a>
 					{% endif %}
 					<a class="btn btn-small featured pull-right" title="{{#category_featured#|escape:'html'}}" onclick="feature_object_toggle('{{object.id}}');"><i class="glyphicon glyphicon-star{% if not object.featured %}-empty{% endif %}"></i></a>
