--- a/plugins/_jquery/view/field/richtext.field.html
+++ b/plugins/_jquery/view/field/richtext.field.html
@@ -4,16 +4,31 @@
 
 <div class="ol-rte well" id="{{field.uid}}-rte">
     <ul class="menu">
-        <li><a data-action="bold"><i class="fa fa-bold"></i></a></li>
-        <li><a data-action="italic"><i class="fa fa-italic"></i></a></li>
-        <li><a data-action="underline"><i class="fa fa-underline"></i></a></li>
-        <li><a data-action="link"><i class="fa fa-link"></i></a></li>
-        <li><a data-action="unlink"><i class="fa fa-unlink"></i></a></li>
-        <li><a data-action="insertUnorderedList"><i class="fa fa-list-ul"></i></a></li>
-        <li><a data-action="insertOrderedList"><i class="fa fa-list-ol"></i></a></li>
-        <!--<li><a data-action="increaseFontSize"><i class="fa fa-arrows-v"></i></a></li>-->
-        <li><a data-action="removeFormat"><i class="fa fa-ban"></i></a></li>
-    </ul>
+        <li><a class="btn" data-action="bold"><i class="fa fa-bold"></i></a></li>
+        <li><a class="btn" data-action="italic"><i class="fa fa-italic"></i></a></li>
+        <li><a class="btn" data-action="underline"><i class="fa fa-underline"></i></a></li>
+        <li><a class="btn" data-action="link"><i class="fa fa-link"></i></a></li>
+        <li><a class="btn" data-action="unlink"><i class="fa fa-unlink"></i></a></li>
+        <li><a class="btn" data-action="insertUnorderedList"><i class="fa fa-list-ul"></i></a></li>
+        <li><a class="btn" data-action="insertOrderedList"><i class="fa fa-list-ol"></i></a></li>
+        <li>
+			<div class="btn-group">
+				<a type="button" class="btn dropdown-toggle" data-toggle="dropdown">
+					<i class="fa fa-arrows-v"></i> <span class="caret"></span>
+				</a>
+				<ul class="dropdown-menu" role="menu">
+					<li><a data-action="setFontSize" data-parameter="1">1</a></li>
+					<li><a data-action="setFontSize" data-parameter="2">2</a></li>
+					<li><a data-action="setFontSize" data-parameter="3">3</a></li>
+					<li><a data-action="setFontSize" data-parameter="4">4</a></li>
+					<li><a data-action="setFontSize" data-parameter="5">5</a></li>
+					<li><a data-action="setFontSize" data-parameter="6">6</a></li>
+					<li><a data-action="setFontSize" data-parameter="7">7</a></li>
+				</ul>
+			</div>
+        </li>
+        <li><a class="btn" data-action="removeFormat"><i class="fa fa-ban"></i></a></li>
+	</ul>
     <div class='text' contenteditable="true" spellcheck="false">
         {{field.value|strip_attribute:'style'}}
     </div>
@@ -25,6 +40,5 @@
 		var $rte = $('#{{field.uid}}-rte');
 		$rte.olrte();
 		$rte.bind('ol.rte.blur', function(ev, content){ $('#{{field.uid}}').html(content); });
-
 	});
 </script>
