--- a/plugins/_jquery/view/field/categories.select.field.html
+++ b/plugins/_jquery/view/field/categories.select.field.html
@@ -8,7 +8,7 @@
 <select class='ofw-field-category form-control' id='{{field.uid}}' name='{{field.name}}[]' multiple>
 	<option value=''>--</option>
 	{% if #category_two_level# %}
-		{% foreach field.choices as toplevel %}
+		{% foreach field.choices_toplevel as toplevel %}
 			<optgroup label="{{toplevel.name|escape}}">
 				{% foreach toplevel.data.subcategories as choice %}
 					<option value='{{choice.id}}'>{{choice.name}}</option>
