Modify rte html for new OFW rte support.

--- a/plugins/_jquery/view/field/richtext.field.html
+++ b/plugins/_jquery/view/field/richtext.field.html
@@ -14,7 +14,7 @@
         <li>
 			<div class="btn-group">
 				<a type="button" class="btn dropdown-toggle" data-toggle="dropdown">
-					<i class="fa fa-arrows-v"></i> <span class="caret"></span>
+					<i data-action-feedback="fontSize" class="fa fa-arrows-v"></i> <span class="caret"></span>
 				</a>
 				<ul class="dropdown-menu" role="menu">
 					<li><a data-action="setFontSize" data-parameter="1">1</a></li>
