--- a/plugins/_jquery/view/field/photo.field.html
+++ b/plugins/_jquery/view/field/photo.field.html
@@ -1,7 +1,7 @@
 <!-- requires jquery! ONLY FOR A SINGLE PHOTO!!!! -->
 <script language="JavaScript" src="{{baseurl}}system/js/plupload/plupload.full.js" type="text/javascript"></script>
 
-<a id="{{field.uid}}-pickfiles" class="btn" style="cursor: pointer;" href="#"><i class="icon-folder-open"></i> Kép kiválasztása</a>
+<a id="{{field.uid}}-pickfiles" class="btn" style="cursor: pointer;"><i class="icon-folder-open"></i> Kép kiválasztása</a>
 
 <div id="{{field.uid}}-transferbar" role="progressbar" class="hidden progress progress-striped active">
   <div class="bar progress-bar" style="width: 0%;"></div>
@@ -35,7 +35,7 @@
 				runtimes : 'html5,flash,html4',
 				browse_button : '{{field.uid}}-pickfiles',
 				drop_element : '{{field.uid}}-filelist',
-				max_file_size : '25mb',
+				max_file_size : '{{field.options.max_file_size|escapejs}}',
 				url : '{% block upload_url %}{{baseurl}}system/plupload/upload/photo/{% endblock upload_url %}',
 				flash_swf_url : '{{baseurl}}system/js/plupload/plupload.flash.swf'
 			});
@@ -55,8 +55,8 @@
 				$('#{{field.uid}}-transferbar div').css('width', file.percent + "%")
 				$('#{{field.uid}}-transferbar').removeClass('hidden');
 			});
-			uploader_{{field.uid}}.bind('Error', function(up, err) {
-				alert("A kiválasztott fájl nem felel meg a követelményeknek! (Maximum 4 MB, jpg/png/gif)");
+			uploader_{{field.uid}}.bind('Error', function(up, err) {MB
+				alert("A kiválasztott fájl nem felel meg a követelményeknek! (Maximum {{field.options.max_file_size|escapejs}}, jpg/png/gif)");
 				up.refresh(); // Reposition Flash/Silverlight
 			});
 			uploader_{{field.uid}}.bind('FileUploaded', function(up, file, result) {
@@ -66,7 +66,7 @@
 				//console.log(res);
 				// check for error
 					if(res.status == 'error'){
-						alert("A fájl feltöltése nem sikerült. Próbálj kissebb méretű fájlt választani (maximum 4 MB, jpg/png/gif)!");
+						alert("A fájl feltöltése nem sikerült. Próbálj kissebb méretű fájlt választani (maximum {{field.options.max_file_size|escapejs}}, jpg/png/gif)!");
 					}
 					else{
 						uploader_update_{{field.uid}}(res);
@@ -80,7 +80,7 @@
 			 **/
 			uploader_update_{{field.uid}} = function(res){
 				// Is it wide/tall enough?
-					if(res.height < 300 || res.width < 300) return alert("The picture is too small. It must be at least 300x300 pixels.");
+					if(res.height < {{field.options.min_height|escapejs}} || res.width < {{field.options.min_width|escapejs}}) return alert("The picture is too small. It must be at least {{field.options.min_width|escapejs}}x{{field.options.min_height|escapejs}} pixels.");
 				// Add my image
 					var imgurl = '{{baseurl}}system/plupload/preview/?id='+res.id;
 					$('#{{field.uid}}-filelist').html("<img src='"+imgurl+"'>");
