--- a/site/css/mozajik-admin.css
+++ b/site/css/mozajik-admin.css
@@ -192,8 +192,8 @@
 	.grippy{
 		cursor: move;
 	}
-	td.list.select, div.list.select { background-image: url(../system/img/assets/checkbox-off.png); background-position: left center; background-repeat: no-repeat; padding-left: 20px; cursor: pointer; }
-	td.list.select.on, div.list.select.on, div.list.select.selected {  background-image: url(../system/img/assets/checkbox-on.png); }
+	td.list.select, div.list.select { background-image: url(../img/button/checkbox-off.png); background-position: left center; background-repeat: no-repeat; padding-left: 20px; cursor: pointer; }
+	td.list.select.on, div.list.select.on, div.list.select.selected {  background-image: url(../img/button/checkbox-on.png); }
 	.grippy{
 		cursor: move;
 	}
