--- a/plugins/_jquery/view/field/photos.field.html
+++ b/plugins/_jquery/view/field/photos.field.html
@@ -1,3 +1,4 @@
+ {% lang 'system/fields' %}
 <!-- Multiple photos -->
 <!-- jquery ui -->
 <script language="JavaScript" src="{{baseurl}}system/js/jquery/jquery-ui-1.9.2/js/jquery-ui-1.9.2.custom.min.js" type="text/javascript"></script>
@@ -82,7 +83,7 @@
 				$('#{{field.uid}}-transferbar').removeClass('hidden');
 			});
 			uploader_{{field.uid}}.bind('Error', function(up, err) {
-				zaj.alert("A kiválasztott fájl nem felel meg a követelményeknek! (Maximum {{field.options.max_file_size|escapejs}}, jpg/png/gif)");
+				zaj.alert("{{#system_field_file_upload_error#|printf:field.options.max_file_size|escapejs}}");
 				up.refresh(); // Reposition Flash/Silverlight
 			});
 			uploader_{{field.uid}}.bind('FileUploaded', function(up, file, result) {
@@ -90,7 +91,7 @@
 				var res = jQuery.parseJSON(result.response);
 				// check for error
 					if(res.status == 'error'){
-						zaj.alert("A fájl feltöltése nem sikerült. Próbálj kissebb méretű fájlt választani (maximum {{field.options.max_file_size|escapejs}}, jpg/png/gif)!");
+						zaj.alert("{{#system_field_file_too_big#|printf:field.options.max_file_size|escapejs}}");
 					}
 					else{
 						uploader_update_{{field.uid}}(res);
@@ -103,8 +104,17 @@
 			 * @return {string|boolean} Returns false or the id.
 			 **/
 			uploader_update_{{field.uid}} = function(res){
+				
+				var max_height = {{field.options.max_height|escapejs}} + 0;
+				var max_width = {{field.options.max_width|escapejs}} + 0;				
 				// Is it wide/tall enough?
 					if(res.height < {{field.options.min_height|escapejs}} || res.width < {{field.options.min_width|escapejs}}) return alert("The picture is too small. It must be at least {{field.options.min_width|escapejs}}x{{field.options.min_height|escapejs}} pixels.");
+
+				// check for height, if is > 0;
+					if(max_height && res.height > max_height) return alert("{{#system_field_picture_too_high#|printf:field.options.max_height|escapejs}}");
+				// check for width, if is > 0;
+					if(max_width && res.width > max_width) return alert("{{#system_field_picture_too_wide#|printf:field.options.max_height|escapejs}}");
+
 				// Add my image
 					var imgurl = '{{baseurl}}system/plupload/preview/?id='+res.id;
 					var el = $("<div class='col-sm-2' id='"+res.id+"' style='position: relative; cursor: pointer;'><img class='pull-left img-thumbnail img-responsive' src='"+imgurl+"'></div>");
