--- a/plugins/_jquery/view/field/time.field.html
+++ b/plugins/_jquery/view/field/time.field.html
@@ -1,5 +1,5 @@
-<script src="{{baseurl}}system/js/bootstrap/2.3.1/bootstrap-picker.min.js?1.1"></script>
-<link rel="stylesheet" href="{{baseurl}}system/css/bootstrap/2.3.1/css/bootstrap-picker.min.css"/>
+<script src="{{baseurl}}system/js/bootstrap/3.2/plugins/timepicker/bootstrap-timepicker.min.js?"></script>
+<link rel="stylesheet" href="{{baseurl}}system/css/bootstrap/3.2/css/bootstrap-timepicker.min.css"/>
 
 <div class="input-append bootstrap-timepicker"><div class="bootstrap-timepicker-widget dropdown-menu"><table><tbody><tr><td><a href="#" data-action="incrementHour"><i class="icon-chevron-up"></i></a></td><td class="separator">&nbsp;</td><td><a href="#" data-action="incrementMinute"><i class="icon-chevron-up"></i></a></td></tr><tr><td><input type="text" name="hour" class="bootstrap-timepicker-hour" maxlength="2"></td> <td class="separator">:</td><td><input type="text" name="minute" class="bootstrap-timepicker-minute" maxlength="2"></td> </tr><tr><td><a href="#" data-action="decrementHour"><i class="icon-chevron-down"></i></a></td><td class="separator"></td><td><a href="#" data-action="decrementMinute"><i class="icon-chevron-down"></i></a></td></tr></tbody></table></div>
 	<input name="{{field.id}}[time]" class="input-small" id="{{field.uid}}-time" type="text" >
