--- a/plugins/_jquery/view/field/richtext.field.html
+++ b/plugins/_jquery/view/field/richtext.field.html
@@ -28,6 +28,7 @@
 			</div>
         </li>
         <li><a class="btn" data-action="removeFormat"><i class="fa fa-ban"></i></a></li>
+        <li><a class="btn" data-action="toggleHtmlView"><i class="fa fa-code"></i></a></li>
 	</ul>
     <div class='text' contenteditable="true" spellcheck="false">
         {{field.value|strip_attribute:'style'}}
