--- a/app/view/update/update-deploy.html
+++ b/app/view/update/update-deploy.html
@@ -12,5 +12,17 @@
 	 	Each template file will now be regenerated upon first request, so server load may be significantly higher during the next few requests...
 	</div>
 
+	{% if dbresults.num_of_changes > 0 %}
+		<div class="alert alert-danger">
+			<h5>The database needs to be updated with {{dbresults.num_of_changes}} automatic changes.</h5>
+			<a href="{{baseurl}}update/database/">Click here</a> to go to the database update panel.
+		</div>
+	{% elseif %}
+		<div class="alert alert-success">
+			<h5>The database seems to be up to date. There are {{dbresults.num_of_todo}} manual changes waiting.</h5>
+			<a href="{{baseurl}}update/database/">Click here</a> to go to the database update panel.
+		</div>
+	{% endif %}
+
 	{{testresults}}
 {% endblock %}
