--- a/plugins/_jquery/view/field/photos.field.html
+++ b/plugins/_jquery/view/field/photos.field.html
@@ -1,4 +1,4 @@
- {% lang 'system/fields' %}
+{% lang 'system/fields' 'photos' %}
 <!-- Multiple photos -->
 <!-- jquery ui -->
 <script language="JavaScript" src="{{baseurl}}system/js/jquery/jquery-ui-1.9.2/js/jquery-ui-1.9.2.custom.min.js" type="text/javascript"></script>
