Change title of update pages.

--- a/app/view/base-system.html
+++ b/app/view/base-system.html
@@ -34,7 +34,7 @@
 
 		{% block scripts %}{% endblock %}
 
-		<title>{% block title %}| mozajik.org | php+javascript framework{% endblock %}</title>
+		<title>{% block title %}|outlast framework{% endblock %}</title>
 	</head>
 
 	<body {% block onload %}{% endblock onload %}>
